; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_sco.c_bta_ag_set_esco_param.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_sco.c_bta_ag_set_esco_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i64 }

@FALSE = common dso_local global i64 0, align 8
@bta_ag_cb = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@.str = private unnamed_addr constant [61 x i8] c"bta_ag_set_esco_param : Resetting ESCO parameters to default\00", align 1
@TRUE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [48 x i8] c"bta_ag_set_esco_param : Setting ESCO parameters\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_ag_set_esco_param(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @FALSE, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i64, i64* @FALSE, align 8
  store i64 %9, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_ag_cb, i32 0, i32 0, i32 1), align 8
  %10 = call i32 @APPL_TRACE_DEBUG(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str, i64 0, i64 0))
  br label %16

11:                                               ; preds = %2
  %12 = load i64, i64* @TRUE, align 8
  store i64 %12, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_ag_cb, i32 0, i32 0, i32 1), align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_ag_cb, i32 0, i32 0, i32 0), align 8
  %15 = call i32 @APPL_TRACE_DEBUG(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.1, i64 0, i64 0))
  br label %16

16:                                               ; preds = %11, %8
  ret void
}

declare dso_local i32 @APPL_TRACE_DEBUG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
